# arxiv-paper-pulse

./: .gitignore  BOT_CLASS_REQUIREMENTS.md  COMPONENTS.md  IMAGE_GENERATOR_MODULE.md  README.md  build_standalone_example.py  create_blog_from_arxiv.py  explore_api_logs.py  generate_article_image_prompt.py  generate_test_articles.py  generate_test_report.py  kosmos_article_display.html  kosmos_blog.html  pyproject.toml  run_all_tests_one_by_one.py  run_all_tests_report.py  run_api.py  run_article_tests.py  test_article_generator.py  test_image_generation_live.py  test_multiple_images.py
arxiv_paper_pulse/: __init__.py  __main__.py  api.py  article_generator.py  batch_processor.py  beehiiv_reader.py  bot.py  chat.py  cli.py  config.py  core.py  crawler.py  documents.py  embeddings.py  gui.py  image_generator.py  models.py  self_playing_game.py  tools.py  utils.py
frontend/: index.html
tests/: BOT_TEST_PROTOCOL.md  README.md  TESTING_QUICK_START.md  TEST_SUMMARY.md  conftest.py  generate_test_results_html.py  test_api_endpoints.py  test_app_against_example.py  test_article_generator.py  test_article_generator_api.py  test_article_generator_cli.py  test_article_generator_edge_cases.py  test_article_generator_error_recovery.py  test_article_generator_integration.py  test_article_generator_steps.py  test_bot.py  test_bot_context.py  test_briefing.py  test_cli_article_selection.py  test_core.py  test_crawler.py  test_gemini_features.py  test_gui.py  test_gui_article_selection.py  test_image_generator.py  test_image_generator_SUITE.md  test_import.py  test_prompt_config.py  (+5 more)
(+11 files in other folders)
